syntax = "proto3";

option go_package = "mandatory4/grpc;proto";

message message{
    string sender = 1;
    string requestOrReply = 2;
    int64 logicalTime = 3;
}

service RicartAgrawalaService {
    rpc RequestAndReply(message) returns (message) {}
}